2004-06-08  Kalpit Desai <kvdesai@cs.unc.edu>
	* visVelocities.m : modified to work for hexapole geometry also.

	* Initial Version
2004-05-18  Jeremy Cribb <jcribb@email.unc.edu>

	* Initial Version
